[package]
name = "drawing"
version = "0.1.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]
edition = "2018"

[dependencies]
piston = "0.40.0"
piston2d-gfx_graphics = "0.56.0"
pistoncore-glutin_window = "0.52.0"
gfx_device_gl = "0.15.0"
gfx = "0.17.1"

[dependencies.piston2d-graphics]
version = "0.30.0"
features = ["glyph_cache_rusttype"]
